<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">文怡家常菜</string>
    <string name="app_name_">文怡家常菜</string>
    <string name="essay">文怡随笔</string>
    <string name="cookbook">菜谱</string>
    <string name="piazza">广场</string>
    <string name="group">圈子</string>
    <string name="personal">个人中心</string>
    <string name="action_settings">Settings</string>
    <string name="user_logout">退出当前账号</string>
    <string name="user_login">登 录</string>
    <string name="user_register">注 册</string>
    <string name="settings">设置</string>
    <string name="network_has_problem">网络不给力啊！</string>
    <string name="user_loginout">您已经退出</string>
    <string name="caipu">家常菜谱</string>
    <string name="tiwen">厨房提问</string>
    <string name="chufang">私人厨房</string>
    <string name="guangchang">作业广场</string>
    <string name="my_homework_layout_title">我家餐桌</string>
    <string name="homework_layout_title">作业广场</string>
    <string name="my_kitchen">选材烹饪</string>
    <string name="str"></string>
    <string name="every_day_chart_title">每日一聊</string>
    <string name="every_day_baijia_title">败家宝贝</string>
    <string name="every_day_shenghuo_title">生活窍门</string>
    <string name="try_loading">加载中...</string>
    <string name="comments">评论</string>
    <string name="messages">消息</string>
    <string name="want_comments">我要评论</string>
    <string name="want_add_comment">我要评一嘴</string>
    <string name="want_submit_homework">交作业</string>
    <string name="cookbook_homework_detail">作业详情</string>
    <string name="browse">浏览</string>
    <string name="begin_trip">开始旅程</string>
    <string name="cook_book_title">每日更新</string>
    <string name="cook_book_detail">菜谱详情</string>
    <string name="enter_user_nickname">请输入昵称</string>
    <string name="enter_user_email">请输入用户名/手机/邮箱</string>
    <string name="enter_user_password">请输入密码</string>
    <string name="register_by_wenyi">厨蜜网账号注册</string>
    <string name="login_by_wenyi">厨蜜网账号登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="click_to_login">点击登录</string>
    <string name="user_level">厨房小毛猴</string>
    <string name="user_score">经验:100/1000</string>
    <string name="score_tip">经验:</string>
    <string name="level_tip">等级:</string>
    <string name="cookbook_upload_file">上传作品</string>
    <string name="cookbook_upload_file_hint">做不好，还做不坏么？走你，我也发个作业，咱添不了彩儿，还添不了堵么？</string>
	<string name="reply_to">回复 @</string>
	<string name="every_day_update">每日更新</string>
    <string name="question_create">提问</string>
        <string name="question_detail">提问详情</string>
    <string name="enter_question">输入问题</string>
    <string name="question_created_success">提问成功</string>
    <string name="question_create_failed">提问失败</string>
    <string name="question_create_submiting">问题正在提交中</string>
    <string name="my_collection_string">我的收藏</string>
    <string name="my_homework_string">我的作业</string>
    <string name="my_question_string">我的提问</string>
    <string name="my_topic_string">我的评论</string>
    <string name="my_kichen_string">私人厨房</string>
    <string name="my_colleciton_success">收藏成功</string>
    <string name="cancle_colleciton_success">取消收藏</string>
    <string name="my_colleciton_failed">收藏失败</string>
    <string name="cancle_colleciton_failed">取消收藏失败</string>
    <string name="app_time">2014-03-10 10:11</string>
    <string name="user_idea_success">信息反馈成功</string>
    <string name="user_idea_failed">信息反馈失败</string>
    <string name="i_will_join">我要参加</string>
    <string name="join_action">参加活动</string>
    <string name="search">搜索</string>
    <string name="sort_by_time">时间排序</string>
    <string name="sort_by_hot">热度排序</string>
    <string name="set_on_top">置顶</string>
    <string name="search_question">搜索问题</string>
    <string name="my_question">我的提问</string>
     <string name="count">100</string>
     <string name="download_image">点我下载</string>
     <string name="next_time_tip">下次再说吧</string>
     <string name="download_new_version_tip">下载新版本喽</string>
     <string name="wenyi_has_new_version">文怡出新版本喽</string>
     <string name="need_to_input_question">啥都没输入，搜个啥啊</string>
     <string name="last_refresh">最后更新：</string>
     <string name="mycollection_tip">去收藏些我的菜谱，慢慢研究吧~</string>
     <string name="myhomework_tip">上交你的作业，馋死我吧！</string>
     <string name="myquestion_tip">有困难就大声说！出！来！</string>
     <string name="mytopic_tip">没事儿来唠两句呗~</string>
     <string name="share_to_wenxin_py">微信朋友圈</string>
     <string name="share_to_wenxin">微信</string>
     <string name="delete_success">删除成功</string>
     <string name="delete_error">删除失败</string>
     <string name="exit_message">这就要走啦？再唠10块钱儿的呗～</string>
     <string name="exit_title">退出应用</string>
     <string name="exit_cancle">再聊会儿</string>
     <string name="exit_exit">明儿再唠</string>
     <string name="login_sina_text">新浪微博登录</string>
     <string name="login_other_text">用其他方式登录</string>
     <string name="login_qq_text">腾讯QQ登录</string>
     <string name="essay_new_action">最新活动</string>
     <string name="essay_everyday_chart">每日一聊</string>
     <string name="essay_life_way">生活窍门</string>
     <string name="essay_good_baby">败家宝贝</string>
     <string name="essay_cook_knowledge">厨房百科</string>
     <string name="essay_question_answer">你问我答</string>
     <string name="bottom_line">----------------------</string>
     <string name="cookbook_summary">做大米时，你试着要加一点点盐，味道会更好...</string>
     
     <!-- group string -->
     <string name="group_hot_str">热门圈子</string>
     <string name="group_personal_str">我的圈子</string>
     <!-- piazza string -->
      <string name="piazza_discover_str">发现</string>
      <string name="piazza_question_str">提问</string>
      <string name="piazza_food_str">发美食</string>
      <string name="piazza_friend_str">好友</string>
      
     <!-- presonal string -->
     <string name="personal_my_friend">我的好友</string>
     <string name="personal_my_collection">我的收藏</string>
     <string name="personal_my_chat_bubble">我的评论</string>
     <string name="personal_my_edit">我发表的</string>
     <string name="personal_my_cookhome">私人厨房</string>
     <string name="personal_gold">积分</string>
     <string name="personal_email">消息</string>
     <string name="personal_experience">经验</string>
     <string name="personal_username_hint">钻石王老五</string>
     
     <string name="personal_edition_hoomwork">作业</string>
     <string name="personal_edition_topic">提问</string>
     <string name="personal_edition_share">分享</string>

     <string name="personal_select_str">请选择食材</string>
     <string name="personal_kitchen_food">食材</string>
     <string name="return_str">返回</string>
     
     <string name="hint_search_event">搜索项</string>
</resources>