<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/wenyi_tab_content"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"/>

        <RadioGroup
            android:id="@+id/tabs_rg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/brown2"
            android:paddingBottom="7dp"
            android:paddingTop="7dp" >

            <RadioButton
                android:id="@+id/essay_tab_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@color/transparent"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/menus01_btn_refresh_select"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/essay"
                android:textColor="#000000"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/cookbook_tab_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:background="@color/transparent"
                android:drawableTop="@drawable/menus02_btn_refresh_select"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/cookbook"
                android:textColor="#000000"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/piazza_tab_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:drawableTop="@drawable/menus03_btn_refresh_select"
                android:gravity="center"
                android:singleLine="true"
                android:background="@color/transparent"
                android:text="@string/piazza"
                android:textColor="#000000"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/group_tab_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:drawableTop="@drawable/menus04_btn_refresh_select"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/group"
                android:background="@color/transparent"
                android:textColor="#000000"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/personal_tab_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@color/transparent"
                android:button="@null"
                android:drawableTop="@drawable/menus05_btn_refresh_select"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/personal"
                android:textColor="#000000"
                android:textSize="13sp" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>