<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include
        layout="@layout/wenyi_common_header"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/piazza_tabs_rg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" >

            <RadioButton
                android:id="@+id/piazza_discover_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/background_selector"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/piazza_discover_str"
                android:textColor="#000000"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/piazza_question_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/background_selector"
                android:button="@null"
                android:drawableTop="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/piazza_question_str"
                android:textColor="#000000"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/piazza_food_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/background_selector"
                android:button="@null"
                android:drawableTop="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/piazza_food_str"
                android:textColor="#000000"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/piazza_friend_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/background_selector"
                android:button="@null"
                android:drawableTop="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/piazza_friend_str"
                android:textColor="#000000"
                android:textSize="24sp" />
        </RadioGroup>

        <FrameLayout
            android:id="@+id/piazza_personal_edition_content"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0" />
    </LinearLayout>

</LinearLayout>