<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <!--
         <com.shecook.wenyi.common.volley.toolbox.NetworkImageView
        android:id="@+id/main_layout_fillparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dip"
        android:background="@drawable/wenyi_06"
        android:gravity="center"
        android:visibility="gone"
        android:scaleType="fitXY" />
    -->

    <include layout="@layout/wenyi_common_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/tabs_rg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:paddingTop="7dp" >

            <RadioButton
                android:id="@+id/personal_edition_topic_rb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/background_selector"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@null"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:text="@string/personal_edition_topic"
                android:textColor="#000000"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/personal_edition_hoomwork_rb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/background_selector"
                android:button="@null"
                android:drawableTop="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/personal_edition_hoomwork"
                android:textColor="#000000"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/personal_edition_share_rb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/background_selector"
                android:button="@null"
                android:drawableTop="@null"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:text="@string/personal_edition_share"
                android:textColor="#000000"
                android:textSize="20sp" />
        </RadioGroup>

        <FrameLayout
            android:id="@+id/personal_edition_content"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0" />
    </LinearLayout>

</LinearLayout>